@@ -31,6 +31,7 @@ Released: not released yet
 - added new functions remove_file(), remove_directory(), create_directory()
 - added new functions systemctl_get_default(), systemctl_set_default()
 - added new functions localectl_set_locale(), timedatectl_set_timezone()
+- added new function get_virtualization_type()
 
 
 Version 0.1
